--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/expense-management-system
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.use-new-id-generator-mappings=false
