--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/expense-management-system
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.use-new-id-generator-mappings=false
+app.jwtSecret=jwt.comSecretKey
+app.jwtExpiration=86400
