--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -54,6 +54,10 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
 
     </dependencies>
 
