Disable serialization feature
There was an exception - 'No serializer found for class
org.hibernate.proxy.pojo.bytebuddy.ByteBuddyInterceptor and no
properties discovered to create BeanSerializer'.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 app.jwtSecret=jwt.comSecretKey
 app.jwtExpiration=86400
+spring.jackson.serialization.fail-on-empty-beans=false
