--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.Mobile">
         <activity android:name=".RegistrationActivity"></activity>
+        <activity android:name=".LoginActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
