--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="eSakwa"
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@style/Theme.Mobile">
+        android:theme="@style/Custom_Theme">
         <activity android:name=".RegistrationActivity"></activity>
         <activity android:name=".LoginActivity"></activity>
         <activity android:name=".MainActivity">
