--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/Custom_Theme">
+        <activity android:name=".activity.ProfileActivity"></activity>
         <activity android:name=".activity.CreateWalletActivity" />
         <activity android:name=".activity.WalletActivity" />
         <activity android:name=".activity.RegistrationActivity" />
