--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/Custom_Theme">
-        <activity android:name=".activity.EditWalletActivity"></activity>
+        <activity android:name=".activity.CreateListActivity"></activity>
+        <activity android:name=".activity.EditWalletActivity" />
         <activity android:name=".activity.AddMemberActivity" />
         <activity android:name=".activity.ChangePasswordActivity" />
         <activity android:name=".activity.EditProfileActivity" />
