--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -5,13 +5,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:icon="@drawable/ic_logo"
         android:label="eSakwa"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/Custom_Theme">
-        <activity android:name=".activity.EditMembersActivity"></activity>
+        <activity android:name=".activity.BaseActivity" />
+        <activity android:name=".activity.EditMembersActivity" />
         <activity android:name=".activity.EditExpenseActivity" />
         <activity android:name=".activity.ExpenseActivity" />
         <activity android:name=".activity.CreateExpenseActivity" />
@@ -27,7 +27,7 @@
         <activity android:name=".activity.AddMemberActivity" />
         <activity android:name=".activity.ChangePasswordActivity" />
         <activity android:name=".activity.EditProfileActivity" />
-        <activity android:name=".activity.StatueActivity" />
+        <activity android:name=".activity.StatueActivity" android:parentActivityName=".activity.MainActivity" />
         <activity android:name=".activity.ProfileActivity" />
         <activity android:name=".activity.CreateWalletActivity" />
         <activity android:name=".activity.WalletActivity" />
