--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+            <version>1.5.1</version>
+        </dependency>
     </dependencies>
 
     <build>
