--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "bootstrap": "^5.0.2",
     "mdbreact": "^5.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
+    "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
