--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -3,14 +3,14 @@
     package="com.example.mobile">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:requestLegacyExternalStorage="true"
         android:icon="@drawable/ic_logo"
         android:label="eSakwa"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/Custom_Theme">
         <activity android:name=".activity.BaseActivity" />
@@ -30,7 +30,9 @@
         <activity android:name=".activity.AddMemberActivity" />
         <activity android:name=".activity.ChangePasswordActivity" />
         <activity android:name=".activity.EditProfileActivity" />
-        <activity android:name=".activity.StatueActivity" android:parentActivityName=".activity.MainActivity" />
+        <activity
+            android:name=".activity.StatueActivity"
+            android:parentActivityName=".activity.MainActivity" />
         <activity android:name=".activity.ProfileActivity" />
         <activity android:name=".activity.CreateWalletActivity" />
         <activity android:name=".activity.WalletActivity" />
